finished version of One Piece website. Including images and spaced out items

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <div class="header"> 
-            <img src="./images/mugiwara.png" alt="Mugiwara">
+            <img src="./images/jollyroger.png" alt="Mugiwara">
             <ul class="rightlinks">
-                <li><a href="">About</a></li>
+                <li><a href="https://onepiece.fandom.com/wiki/One_Piece_Wiki">About</a></li>
                 <li><a href="https://onepiece.fandom.com/wiki/Straw_Hat_Pirates">The Crew</a></li>
                 <li><a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy">The Captain</a></li>
             </ul>
@@ -25,51 +25,52 @@
                     <div class="lefttext2">
                         Welcome to the official recruitment page of The Strawhat Pirates. Meet The Captain and The Crew and find out what it takes to be a Strawhat Pirate!
                     </div>
-                    <div class="buttons">
+                    <div class="buttonupper">
                         <button>Join the Crew!!</button>
                     </div>
                 </div>
                 <div class="rightcontainer">
-                    <img src="./images/mugiwara.png">
+                    <img src="./images/jollyroger.png">
                 </div>
             </div>
             <div class="body2">
                 <div class="body2header"> The main crew</div>
                 <div class="body2images">
                     <div class="innerbox"> 
-                        <img src="./images/mugiwara.png">
-                        <div class="text"> Img 1 Text</div>
+                        <img src="./images/luffy.png">
+                        <div class="text"> Mokey D. Luffy</div>
                     </div>
                     <div class="innerbox"> 
-                        <img src="./images/mugiwara.png">
-                        <div class="text"> Img 2 Text</div> 
+                        <img src="./images/zoro.jpg">
+                        <div class="text"> Rorona Zoro</div> 
                     </div>
                     <div class="innerbox"> 
-                        <img src="./images/mugiwara.png">
-                        <div class="text"> Img 3 Text</div>
+                        <img src="./images/sanji.png">
+                        <div class="text"> Vinsmoke Sanji</div>
                     </div>
                     <div class="innerbox"> 
-                        <img src="./images/mugiwara.png">
-                        <div class="text"> Img 4 Text</div> </div>
+                        <img src="./images/nami.png">
+                        <div class="text"> Nami</div> </div>
                 </div>
             </div>
             <div class="body3">
                 <div class="luffyquote">
-                    I'm going to be King of the Pirates
-                    <div class="luffysig">- MDL</div>
+                    "I don't wanna conquer anything. It's just that the person with the most freedom on the sea is the Pirate King."
+                    <div class="luffysig">- Monkey D. Luffy</div>
                 </div>
             </div>
             <div class="body4">
                 <div class="textbox">
                     <div class="body4lefttext">
                         <div class="lefttextheader">
-                            Box 4 Header
+                            The time is upon you!
                         </div>
                         <div class="lefttextcontent">
-                            More info
+                            Join the crew and be a part of history!
                         </div>
                     </div>
-                    <div class="signup">Sign up</div>
+                    <div class="bottombutton" id="test">
+                        <button id="footerbutton">Join the Crew!!</button>
                 </div>
             </div>
         </div>
